--- a/EF_network_analysis.tex
+++ b/EF_network_analysis.tex
@@ -286,16 +286,13 @@ O'Reilly, Email: \href{mailto:foreilly@stanford.edu}{foreilly@stanford.edu}}
 
 \begin{table}
 \caption*{
-{\fontsize{20}{25}\selectfont  Table 1. Sample characteristics by country and timepoint\fontsize{8}{10}\selectfont } \\ 
+{\fontsize{20}{25}\selectfont  Table 1. Age and executive function by country and timepoint\fontsize{8}{10}\selectfont } \\ 
 {\fontsize{14}{17}\selectfont  All summaries are anchored to children with any EF observed at that timepoint (partial EF allowed).\fontsize{8}{10}\selectfont }
 } 
 \fontsize{8.0pt}{10.0pt}\selectfont
 \begin{tabular*}{1\linewidth}{@{\extracolsep{\fill}}l|l|ccccc}
 \toprule
 \multicolumn{2}{c}{} & Australia — T1 & Australia — T2 & Australia — T3 & SA — T1 & SA — T2 \\ 
-\midrule\addlinespace[2.5pt]
-{\bfseries \multirow[t]{2}{*}{Sample size (anchored on any EF)}} & EF anchor N & 232 & 217 & 106 & 217 & 190 \\ 
- & EF complete N (\%) & 231 (99.6\%) & 213 (98.2\%) & 105 (99.1\%) & 205 (94.5\%) & 186 (97.9\%) \\ 
 \midrule\addlinespace[2.5pt]
 {\bfseries \multirow[t]{2}{*}{Age}} & Age (years), Mean (SD) & 4.43 (0.38) & 4.99 (0.38) & 5.92 (0.33) & 4.71 (0.59) & 5.35 (0.57) \\ 
  & Age (years), Median [min, max] & 4.44 [3.20, 5.24] & 4.99 [3.74, 5.88] & 5.90 [5.27, 6.59] & 4.68 [2.80, 5.89] & 5.36 [3.54, 6.55] \\ 
@@ -306,33 +303,51 @@ O'Reilly, Email: \href{mailto:foreilly@stanford.edu}{foreilly@stanford.edu}}
  & Inhibition, n & 232 & 215 & 105 & 213 & 188 \\ 
  & Working memory, Mean (SD) & 1.50 (0.95) & 1.82 (0.89) & 2.56 (0.79) & 1.55 (0.81) & 2.00 (0.83) \\ 
  & Working memory, n & 232 & 215 & 105 & 211 & 188 \\ 
+\bottomrule
+\end{tabular*}
+\end{table}
+
+\end{landscape}
+
+\begin{landscape}
+
+\begin{table}
+\caption*{
+{\fontsize{20}{25}\selectfont  Table 2. Socioeconomic status and home learning environment by country and timepoint\fontsize{8}{10}\selectfont } \\ 
+{\fontsize{14}{17}\selectfont  All summaries are anchored to children with any EF observed at that timepoint (partial EF allowed).\fontsize{8}{10}\selectfont }
+} 
+\fontsize{8.0pt}{10.0pt}\selectfont
+\begin{tabular*}{1\linewidth}{@{\extracolsep{\fill}}l|l|ccccc}
+\toprule
+\multicolumn{2}{c}{} & SA — T1 & SA — T2 & Australia — T1 & Australia — T2 & Australia — T3 \\ 
 \midrule\addlinespace[2.5pt]
-{\bfseries \multirow[t]{4}{*}{Caregiver education (SA)}} & 1 & NA & NA & NA & 30 (13.8\%) & 30 (15.8\%) \\ 
- & 2 & NA & NA & NA & 5 (2.3\%) & 5 (2.6\%) \\ 
- & 3 & NA & NA & NA & 1 (0.5\%) & 1 (0.5\%) \\ 
- & NA & NA & NA & NA & 181 (83.4\%) & 154 (81.1\%) \\ 
+{\bfseries \multirow[t]{4}{*}{Caregiver education (SA)}} & 1 & 30 (13.8\%) & 30 (15.8\%) & NA & NA & NA \\ 
+ & 2 & 5 (2.3\%) & 5 (2.6\%) & NA & NA & NA \\ 
+ & 3 & 1 (0.5\%) & 1 (0.5\%) & NA & NA & NA \\ 
+ & NA & 181 (83.4\%) & 154 (81.1\%) & NA & NA & NA \\ 
 \midrule\addlinespace[2.5pt]
-{\bfseries \multirow[t]{6}{*}{Caregiver education (AUS)}} & 1 & 18 (7.8\%) & 17 (7.8\%) & 8 (7.5\%) & NA & NA \\ 
- & 2 & 16 (6.9\%) & 15 (6.9\%) & 6 (5.7\%) & NA & NA \\ 
- & 3 & 61 (26.3\%) & 56 (25.8\%) & 24 (22.6\%) & NA & NA \\ 
- & 4 & 68 (29.3\%) & 65 (30.0\%) & 34 (32.1\%) & NA & NA \\ 
- & 5 & 35 (15.1\%) & 34 (15.7\%) & 16 (15.1\%) & NA & NA \\ 
- & NA & 34 (14.7\%) & 30 (13.8\%) & 18 (17.0\%) & NA & NA \\ 
+{\bfseries \multirow[t]{6}{*}{Caregiver education (AUS)}} & 1 & NA & NA & 18 (7.8\%) & 17 (7.8\%) & 8 (7.5\%) \\ 
+ & 2 & NA & NA & 16 (6.9\%) & 15 (6.9\%) & 6 (5.7\%) \\ 
+ & 3 & NA & NA & 61 (26.3\%) & 56 (25.8\%) & 24 (22.6\%) \\ 
+ & 4 & NA & NA & 68 (29.3\%) & 65 (30.0\%) & 34 (32.1\%) \\ 
+ & 5 & NA & NA & 35 (15.1\%) & 34 (15.7\%) & 16 (15.1\%) \\ 
+ & NA & NA & NA & 34 (14.7\%) & 30 (13.8\%) & 18 (17.0\%) \\ 
 \midrule\addlinespace[2.5pt]
-{\bfseries \multirow[t]{9}{*}{Household income (SA)}} & 1 & NA & NA & NA & 17 (7.8\%) & 13 (6.8\%) \\ 
- & 2 & NA & NA & NA & 61 (28.1\%) & 46 (24.2\%) \\ 
- & 3 & NA & NA & NA & 80 (36.9\%) & 63 (33.2\%) \\ 
- & 4 & NA & NA & NA & 43 (19.8\%) & 39 (20.5\%) \\ 
- & 5 & NA & NA & NA & 8 (3.7\%) & 7 (3.7\%) \\ 
- & 7 & NA & NA & NA & 1 (0.5\%) & 1 (0.5\%) \\ 
- & 999 & NA & NA & NA & 1 (0.5\%) & NA \\ 
- & UNK & NA & NA & NA & 3 (1.4\%) & NA \\ 
- & NA & NA & NA & NA & 3 (1.4\%) & 21 (11.1\%) \\ 
+{\bfseries \multirow[t]{4}{*}{Household income (AUS)}} & 1 & NA & NA & 20 (8.6\%) & 19 (8.8\%) & 8 (7.5\%) \\ 
+ & 2 & NA & NA & 126 (54.3\%) & 117 (53.9\%) & 51 (48.1\%) \\ 
+ & 3 & NA & NA & 43 (18.5\%) & 43 (19.8\%) & 27 (25.5\%) \\ 
+ & NA & NA & NA & 43 (18.5\%) & 38 (17.5\%) & 20 (18.9\%) \\ 
 \midrule\addlinespace[2.5pt]
-{\bfseries \multirow[t]{4}{*}{Household income (AUS)}} & 1 & 20 (8.6\%) & 19 (8.8\%) & 8 (7.5\%) & NA & NA \\ 
- & 2 & 126 (54.3\%) & 117 (53.9\%) & 51 (48.1\%) & NA & NA \\ 
- & 3 & 43 (18.5\%) & 43 (19.8\%) & 27 (25.5\%) & NA & NA \\ 
- & NA & 43 (18.5\%) & 38 (17.5\%) & 20 (18.9\%) & NA & NA \\ 
+{\bfseries \multirow[t]{10}{*}{Assets and home learning environment (continuous)}} & HLE activity frequency (sum), Mean (SD) & 10.20 (3.03) & 12.45 (3.54) & NA & NA & NA \\ 
+ & HLE activity frequency (sum), n & 214 & 183 & NA & NA & NA \\ 
+ & HLE: books/toys total, Mean (SD) & 2.55 (1.00) & 2.59 (1.05) & NA & NA & NA \\ 
+ & HLE: books/toys total, n & 215 & 184 & NA & NA & NA \\ 
+ & HLE: time total, Mean (SD) & 4.00 (1.77) & 4.11 (1.83) & NA & NA & NA \\ 
+ & HLE: time total, n & 217 & 186 & NA & NA & NA \\ 
+ & HLE: unique caregiver types involved, Mean (SD) & 2.26 (1.14) & 1.67 (0.74) & NA & NA & NA \\ 
+ & HLE: unique caregiver types involved, n & 214 & 105 & NA & NA & NA \\ 
+ & Household assets score (SA; NIDS, 0–26), Mean (SD) & 7.80 (3.00) & 7.69 (3.07) & NA & NA & NA \\ 
+ & Household assets score (SA; NIDS, 0–26), n & 217 & 190 & NA & NA & NA \\ 
 \bottomrule
 \end{tabular*}
 \end{table}
